# parallel_partition

./: .gitignore  CMakeLists.txt  README.md  library.h  main.cpp
my_lib/: CMakeLists.txt  catch_main.cpp  catch_tests.cpp
my_lib/include/: library.h
my_lib/src/: library.cpp
